# segment2explain

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  eval_quick_flow.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  ruff.toml  run_diagnostic.py  run_samples.py  test_kv_cache_debug.py
.claude/commands/: check-ui.md  screenshot.md  start-app.md  stop-app.md  test-sample.md
backend/: config.py  dependencies.py  dicom.py  image_service.py  main.py  pipeline.py  schemas.py  ws.py
eval_output/: calcification_report.txt  cardiomegaly_report.txt  describe_cardiomegaly_report.txt  describe_lung_opacity_report.txt  describe_nodule_report.txt  dicom_chest_xray_tf_report.txt  dicom_siim_pneumothorax_report.txt  lung_opacity_report.txt  nodule_mass_report.txt  pneumothorax_report.txt  summary.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
models/: attention_prior.py  medgemma_torch.py  medsam3_concepts_reference.txt  sat_ds_labels.txt
prompts/: analysis_prompt.txt  answer_prompt.txt  concept_select_prompt.txt  cxr_concepts.txt  extract_target_prompt.txt  filter_segment_prompt.txt  match_segments_prompt.txt  system_prompt.txt  templates.py  validate_prompt.txt
scripts/: experiment_refinement.py  merge_medsam3_lora.py
tests/: __init__.py  conftest.py  test_backend_api.py  test_dicom.py  test_finding_injector.py  test_intent_classify.py  test_measure.py  test_medgemma_torch.py  test_medsam3_tool.py  test_orchestrator.py  test_overlay_multi.py  test_parallel_pipeline.py  test_pipeline.py  test_refined_segmentation.py  test_segment_chip_processor.py  test_segments_list_renderer.py  test_steps_renderer.py  test_templates.py  test_tool_calls.py  test_validation.py
tests/fixtures/: README.md
tools/: measure.py  medsam3_tool.py  overlay.py  refined_segmentation.py
utils/: __init__.py  finding_injector.py  segment_chip_processor.py  segments_list_renderer.py  steps_renderer.py
(+33 files in other folders)
